--- a/Competition Code.Rmd
+++ b/Competition Code.Rmd
@@ -12,6 +12,7 @@ library(tidyverse)
 library(dplyr)
 library(stats)
 library(forecast)
+library(rnoaa)
 
 cherry <- read.csv("data/washingtondc.csv") %>% 
   bind_rows(read.csv("data/liestal.csv")) %>% 
